# serializer version: 1
# name: test_resources_read
  list([
    dict({
      'mimeType': None,
      'text': '{"names": "Kitchen", "domain": "light", "state": "on", "attributes": {"temperature": "0.9", "humidity": "65"}}',
      'uri': 'entity_id://light/kitchen',
    }),
  ])
# ---
# name: test_tools_call
  dict({
    'failed': list([
    ]),
    'success': list([
      dict({
        'id': 'light.kitchen',
        'name': 'Kitchen',
        'type': 'entity',
      }),
    ]),
    'targets': list([
    ]),
  })
# ---
# name: test_tools_list
  'HassTurnOn'
# ---
# name: test_tools_list.1
  'Turns on/opens a device or entity'
# ---
# name: test_tools_list.2
  dict({
    'type': 'string',
  })
# ---
